# model-based-planning

./: .gitignore  flake.nix  local-datasets.yml  mount-tmp.sh  plan-notebook.py  plan.py  pyproject.toml  setup.py  sweep-plan.py  train.py
azure/: config.py  launch_plan.py  launch_train.py
config/: offline.py
environments/: __init__.py  parallel_envs.py  wrappers.py
environments/env_utils/vec_env/: dummy_vec_env.py  subproc_vec_env.py
environments/mujoco/: ant.py  ant_goal.py  half_cheetah_dir.py  half_cheetah_vel.py
environments/mujoco/rand_param_envs/: walker2d_rand_params.py
environments/navigation/: gridworld.py  point_robot.py
plotting/: plot.py  read_results.py  scores.py  table.py
scratch/: jobs.py  timer.py
trajectory/datasets/: __init__.py  d4rl.py  local.py  preprocessing.py  sequence.py
trajectory/models/: ein.py  embeddings.py  mlp.py  transformers.py
trajectory/search/: core.py  sampling.py  utils.py
trajectory/utils/: __init__.py  arrays.py  config.py  discretization.py  git_utils.py  progress.py  rendering.py  serialization.py  setup.py  training.py  video.py
utils/: evaluation.py  helpers.py  tb_logger.py  timer.py  writer.py
