[tool.poetry]
name = "model-based planning"
version = "0.1.0"
description = ""
authors = ["Ethan Brooks <ethanabrooks@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
scipy = ">=1.8,<1.9.2"
scikit-image = "^0.20.0"
scikit-video = "^1.1.11"
torch = "1.11.0"
mujoco-py = "^2.0.2.10"
d4rl = "^1.1"
matplotlib = "^3.7.1"
gym = "^0.17.2"
tensorboard = "^2.12.0"
typed-argument-parser = "^1.8.0"
gitpython = "^3.1.31"
mjrl = {git = "https://github.com/aravindr93/mjrl"}
pyyaml = "^6.0"
seaborn = "^0.12.2"
torchrl = "^0.0.5"
torchsnapshot = "^0.1.0"
wandb = "^0.14.0"
moviepy = "^1.0.3"
imageio = "^2.27.0"
ray = "^2.3.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
ipdb = "^0.13.9"
ipython = "^8.4.0"
pre-commit = "^2.20.0"
mypy = "^0.971"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
